[package]
name = "sample-cgi-script"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
axum = "0.8.4"
tower-cgi = { path = "../tower-cgi" }
tokio = { version = "1", features = ["full"] }
tower-sessions = "0.14.0"
tower-cookies = "0.11.0"
tower-sessions-file-based-store = "*"
