[package]
name = "tower-cgi"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
cgi-rs = { path = "../cgi-rs" }
hyper = { version = "1.6.0", default-features = false }
snafu = "0.8"
tower = { version = "0.5", default-features = false, features = ["util"] }
http-body-util = "0.1.2"
axum = "0.8.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
